fix failing checks

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
       <p id="description"><i>Thank you for taking the time to help us improve the platform</i></p>
     </header>
     <form id="survey-form">
-      <label for="name" id="name-label">name:</label
-      ><input required id="name" type="text" placeholder="enter your name" />
+      <label id="name-label" for="name">name:</label
+      ><input id="name" type="text" required placeholder="enter your name" />
 
-      <label for="email" id="email-label">email:</label
-      ><input required id="email" type="email" placeholder="enter your email" />
+      <label id="email-label" for="email">email:</label
+      ><input id="email" type="email" required placeholder="enter your email" />
 
-      <label for="age" id="number-label">age:</label
-      ><input required id="number" type="number" min="13" max="120" placeholder="age" />
+      <label id="number-label" for="age">age:</label
+      ><input id="number" type="number" required min="13" max="120" placeholder="age" />
 
       <label for="role">Which option best describes your current role?</label>
-      <select name="dropdown" id="dropdown">
+      <select id="dropdown" name="dropdown">
         <option value="">select current role</option>
         <option value="1">student</option>
         <option value="2">Full time job</option>
@@ -33,17 +33,17 @@
 
       <label for="recommendation">Would you recommend freeCodeCamp to a friend?</label>
       <label>
-        <input type="radio" value="definetly" name="recommendation" class="inline" />definetly
+        <input class="inline" name="recommendation" type="radio" value="definetly" />definetly
       </label>
       <label>
-        <input type="radio" value="maybe" name="recommendation" class="inline" />maybe
+        <input class="inline" name="recommendation" type="radio" value="maybe" />maybe
       </label>
       <label>
-        <input type="radio" value="not sure" name="recommendation" class="inline" />not sure
+        <input class="inline" name="recommendation" type="radio" value="not sure" />not sure
       </label>
 
       <label for="feature">What is your favorite feature of freeCodeCamp? </label>
-      <select name="feature" id="feature">
+      <select id="feature" name="feature">
         <option value="">select an option</option>
         <option value="1">Challenges</option>
         <option value="2">Projects</option>
@@ -53,68 +53,68 @@
 
       <label>What would you like to see improved? (Check all that apply)</label>
       <label>
-        <input type="checkbox" name="improve" value="front-end" class="inline" required />Front-end
+        <input class="inline" name="improve" type="checkbox" value="front-end" required />Front-end
         Projects
       </label>
       <label>
-        <input type="checkbox" value="back-end" name="improve" class="inline" required />back-end
+        <input class="inline" name="improve" type="checkbox" value="back-end" required />back-end
         projects
       </label>
       <label>
         <input
+          class="inline"
+          name="improve"
           type="checkbox"
           value="data visualization"
-          name="improve"
-          class="inline"
           required
         />data visualization
       </label>
       <label>
         <input
+          class="inline"
+          name="improve"
           type="checkbox"
           value="challenges"
-          name="improve"
-          class="inline"
           required
         />challenges
       </label>
       <label>
         <input
+          class="inline"
+          name="improve"
           type="checkbox"
           value="open source community"
-          name="improve"
-          class="inline"
           required
         />open source community
       </label>
       <label>
         <input
+          class="inline"
+          name="improve"
           type="checkbox"
           value="gitter help room"
-          name="improve"
-          class="inline"
           required
         />gitter help room
       </label>
       <label>
-        <input type="checkbox" value="videos" name="improve" class="inline" required />videos
+        <input class="inline" name="improve" type="checkbox" value="videos" required />videos
       </label>
       <label>
-        <input type="checkbox" value="city meetups" name="improve" class="inline" required />city
+        <input class="inline" name="improve" type="checkbox" value="city meetups" required />city
         meetups
       </label>
       <label>
-        <input type="checkbox" value="wiki" name="improve" class="inline" required />wiki
+        <input class="inline" name="improve" type="checkbox" value="wiki" required />wiki
       </label>
       <label>
-        <input type="checkbox" value="forum" name="improve" class="inline" required />forum
+        <input class="inline" name="improve" type="checkbox" value="forum" required />forum
       </label>
       <label>
         <input
+          class="inline"
+          name="improve"
           type="checkbox"
           value="additional course"
-          name="improve"
-          class="inline"
           required
         />additional courses
       </label>
